# SlideViewer

./: .gitignore  CITATION.cff  LICENSE  README.md  SlideViewer.spec  launcher.py  pyproject.toml  requirements.txt  run_slide_viewer_raycast.sh
slide_viewer/: SLIDE_FORMAT_GUIDE.md  __init__.py  __main__.py  ai.py  app.py  constants.py  dialogs.py  editor.py  exporter.py  models.py  panels.py  presentation.py  renderer.py  sanitizer.py  test.md
